fix overflow on mobile #64

--- a/src/styles/home/home.scss
+++ b/src/styles/home/home.scss
@@ -1,5 +1,6 @@
 .home{
     background: $darkBlue;
+    overflow-x: hidden;
     section {
         min-height: 850px;
     }
